Fixed layout issues in Nextjs 14 by modifying data-overlay-container in globals.css. also added Privacy policy page, terms-of-service page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+/* html, body {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
-  }
+  } */
 
-  main {
+  [data-overlay-container=true] {
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+  }
+  footer {
+    margin-top: auto;
+  }
+  /* main {
     width: 100vw;
     height: 66vh;
    
@@ -20,4 +29,4 @@ html, body {
     height: 120vh;
    
     
-  }
+  } */
